# VLibrary

./: .gitignore  CMakeLists.txt  README.md  VLibrary.sh  main.cpp
Classes/: Book.cpp  Book.h  Category.cpp  Category.h  Image.h  Library.cpp  Library.h
Data/: books.csv  categories.csv  clean_dataset.py  download_images.py
